upload dataframes and rdd

--- a/podman/linux-ubuntu/Dockerfile
+++ b/podman/linux-ubuntu/Dockerfile
@@ -36,7 +36,7 @@ WORKDIR /laboratorio-spark
 
 
 # Cria os diretórios onde os volumes serão montados
-RUN mkdir -p /laboratorio-spark/arquivos_laboratorio /laboratorio-spark/arquivos_laboratorio
+RUN mkdir -p /laboratorio-spark/arquivos_laboratorio
 
 #Uso interativo do container
 #CMD ["/bin/bash"]
